[gd_scene load_steps=20 format=3 uid="uid://xbu57lkb77xa"]

[ext_resource type="Script" path="res://scripts/state_machine/animal.gd" id="1_1sxch"]
[ext_resource type="Texture2D" uid="uid://r3xl0phwtuud" path="res://assets/creatures/rabbit_sheet.png" id="2_j17p5"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_yl4r7"]
[ext_resource type="Script" path="res://scripts/state_machine/states/frightened.gd" id="3_8t8pi"]
[ext_resource type="Script" path="res://scripts/state_machine/states/idle.gd" id="4_otxx3"]
[ext_resource type="Script" path="res://scripts/state_machine/states/open.gd" id="5_rgdlx"]
[ext_resource type="Script" path="res://scripts/state_machine/states/chomp.gd" id="6_j1x1f"]
[ext_resource type="Script" path="res://scripts/state_machine/states/chewing.gd" id="7_f41cr"]
[ext_resource type="Script" path="res://scripts/state_machine/states/satisfied.gd" id="8_c8hpr"]

[sub_resource type="Animation" id="Animation_38stx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(82, -93, -39, -17, 99, 96, 92, 160, 143, 230, 94, 262, -120, 258, -148, 192, -95, 94, -27, 58, -74, -12, -52, -67, -125, -123, -95, -276, -18, -103, 50, -101, 139, -267, 133, -125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rddwh"]
resource_name = "chewing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(17, -60, 74, -101, 149, -51, 159, 12, 142, 56, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_nytu0"]
resource_name = "chomp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(17, -60, 74, -101, 149, -51, 23, 34, 22, 81, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(212, -55, 63, -21, 28, 72, 173, 106, 246, 51, 253, -19)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1w5cp"]
resource_name = "frightened"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(17, -60, 74, -101, 149, -51, 159, 12, 142, 56, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_thdp5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(17, -60, 74, -101, 149, -51, 159, 12, 142, 56, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FeedCollider2/FeedPolygon2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s44qc"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(16, -82, 40, -140, 97, -155, 175, -123, 216, -59, 62, -26, 24, 78, 166, 104, 145, 206, 116, 250, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}

[sub_resource type="Animation" id="Animation_w67g4"]
resource_name = "satisfied"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchCollider/TouchPolygon:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(17, -60, 74, -101, 149, -51, 159, 12, 142, 56, 166, 104, 145, 206, 116, 250, 170, 305, 170, 305, -220, 227, -224, 58, 12, 34, -154, -27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FeedCollider/FeedPolygon:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7on56"]
_data = {
"RESET": SubResource("Animation_38stx"),
"chewing": SubResource("Animation_rddwh"),
"chomp": SubResource("Animation_nytu0"),
"frightened": SubResource("Animation_1w5cp"),
"idle": SubResource("Animation_thdp5"),
"open": SubResource("Animation_s44qc"),
"satisfied": SubResource("Animation_w67g4")
}

[sub_resource type="GDScript" id="GDScript_8xhjq"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	text = str($\"..\".flee_counter)
"

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_77cfh"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[node name="Animal" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1sxch")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_j17p5")
hframes = 4
frame = 1

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7on56")
}

[node name="CalmTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="ChompTImer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_yl4r7")
starting_state = NodePath("Idle")

[node name="Frightened" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("3_8t8pi")
idle_state = NodePath("../Idle")
animation_name = "frightened"

[node name="Label" type="Label" parent="StateMachine/Frightened"]
offset_left = -68.0
offset_top = -319.0
offset_right = 106.0
offset_bottom = -253.0
script = SubResource("GDScript_8xhjq")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("frightened_state", "open_state")]
script = ExtResource("4_otxx3")
frightened_state = NodePath("../Frightened")
open_state = NodePath("../Open")
animation_name = "idle"

[node name="Open" type="Node" parent="StateMachine" node_paths=PackedStringArray("chomp_state")]
script = ExtResource("5_rgdlx")
chomp_state = NodePath("../Chomp")
animation_name = "open"

[node name="Chomp" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "chewing_state", "satisfied_state")]
script = ExtResource("6_j1x1f")
idle_state = NodePath("../Idle")
chewing_state = NodePath("../Chewing")
satisfied_state = NodePath("../Satisfied")
animation_name = "chomp"

[node name="Chewing" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "satisfied_state")]
script = ExtResource("7_f41cr")
idle_state = NodePath("../Idle")
satisfied_state = NodePath("../Satisfied")
animation_name = "chewing"

[node name="Satisfied" type="Node" parent="StateMachine"]
script = ExtResource("8_c8hpr")
animation_name = "satisfied"

[node name="TouchCollider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="TouchPolygon" type="CollisionPolygon2D" parent="TouchCollider"]
polygon = PackedVector2Array(82, -93, -39, -17, 99, 96, 92, 160, 143, 230, 94, 262, -120, 258, -148, 192, -95, 94, -27, 58, -74, -12, -52, -67, -125, -123, -95, -276, -18, -103, 50, -101, 139, -267, 133, -125)

[node name="FeedCollider2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="FeedPolygon2" type="CollisionPolygon2D" parent="FeedCollider2"]
polygon = PackedVector2Array(212, -55, 63, -21, 28, 72, 173, 106, 246, 51, 253, -19)
disabled = true

[node name="FeedCollider" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="FeedPolygon" type="CollisionPolygon2D" parent="FeedCollider"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(0.491488, 0.731645, 0, 1)
material = SubResource("CanvasItemMaterial_77cfh")
emitting = false
emission_shape = 3
emission_rect_extents = Vector2(100, 1)
gravity = Vector2(0, -300)
radial_accel_max = 47.15
scale_amount_min = 40.65
scale_amount_max = 73.17
anim_speed_max = 4.25
